--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.2",
+    "react-native-app-intro-slider": "^4.0.4",
+    "react-native-banner-carousel": "^1.0.3",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-get-random-values": "^1.7.2",
     "react-native-image-crop-picker": "^0.37.2",
     "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "~2.2.0",
