--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.2.2",
+    "@expo-google-fonts/raleway": "^0.2.2",
     "@expo/vector-icons": "^12.0.5",
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-picker/picker": "^2.2.1",
@@ -21,9 +23,13 @@
     "@unimodules/react-native-adapter": "^6.3.9",
     "axios": "^0.24.0",
     "expo": "~43.0.0",
+    "expo-camera": "~12.0.3",
     "expo-checkbox": "~2.0.0",
+    "expo-font": "~10.0.3",
     "expo-image-picker": "~11.0.3",
     "expo-image-picker-multiple": "^1.4.1",
+    "expo-notifications": "^0.14.1",
+    "expo-permissions": "^13.1.1",
     "expo-status-bar": "~1.1.0",
     "formik": "^2.2.9",
     "jwt-decode": "^3.1.2",
