--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-gesture-handler": "~1.10.2",
     "react-native-get-random-values": "^1.7.2",
     "react-native-image-crop-picker": "^0.37.2",
+    "react-native-paper": "^4.11.2",
     "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.3.2",
