--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@expo-google-fonts/inter": "^0.2.2",
     "@expo-google-fonts/raleway": "^0.2.2",
     "@expo/vector-icons": "^12.0.5",
+    "@ptomasroos/react-native-multi-slider": "^2.2.2",
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-picker/picker": "^2.2.1",
     "@react-navigation/bottom-tabs": "^6.0.9",
@@ -42,6 +43,7 @@
     "react-native-gesture-handler": "~1.10.2",
     "react-native-get-random-values": "^1.7.2",
     "react-native-image-crop-picker": "^0.37.2",
+    "react-native-image-slider-box": "^1.1.22",
     "react-native-paper": "^4.11.2",
     "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "~2.2.0",
