--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-navigation-stack": "^2.10.4",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "rn-all-nepal-payment": "^1.0.2",
+    "timeago.js": "^4.0.2",
     "unimodules-permissions-interface": "^6.1.0",
     "uuid": "^8.3.2",
     "yup": "^0.32.11"
