--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-get-random-values": "^1.7.2",
     "react-native-image-crop-picker": "^0.37.2",
     "react-native-image-slider-box": "^1.1.22",
+    "react-native-pager-view": "5.4.6",
     "react-native-paper": "^4.11.2",
     "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "~2.2.0",
@@ -57,7 +58,8 @@
     "timeago.js": "^4.0.2",
     "unimodules-permissions-interface": "^6.1.0",
     "uuid": "^8.3.2",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "react-native-emoticons": "github:snlbaral/react-native-emoticons"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
