--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "react-native": "0.64.2",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-banner-carousel": "^1.0.3",
-    "react-native-emoticons": "github:snlbaral/react-native-emoticons",
+    "react-native-emoticons": "snlbaral/react-native-emoticons",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-get-random-values": "^1.7.2",
     "react-native-image-crop-picker": "^0.37.2",
