--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "expo": "~43.0.0",
     "expo-camera": "~12.0.3",
     "expo-checkbox": "~2.0.0",
+    "expo-fast-image": "^1.1.3",
+    "expo-file-system": "~13.0.3",
     "expo-font": "~10.0.3",
     "expo-image-picker": "~11.0.3",
     "expo-image-picker-multiple": "^1.4.1",
