--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
     "@ptomasroos/react-native-multi-slider": "^2.2.2",
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/netinfo": "^6.0.2",
-    "@react-native-picker/picker": "^2.2.1",
+    "@react-native-picker/picker": "2.1.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/material-bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
-    "@unimodules/core": "^7.1.2",
-    "@unimodules/react-native-adapter": "^6.3.9",
+    "@unimodules/core": "~7.2.0",
+    "@unimodules/react-native-adapter": "~6.5.0",
     "axios": "^0.24.0",
     "expo": "~43.0.0",
     "expo-camera": "~12.0.3",
@@ -33,15 +33,15 @@
     "expo-font": "~10.0.3",
     "expo-image-picker": "~11.0.3",
     "expo-image-picker-multiple": "^1.4.1",
-    "expo-notifications": "^0.14.1",
-    "expo-permissions": "^13.1.1",
+    "expo-notifications": "~0.13.3",
+    "expo-permissions": "~13.0.3",
     "expo-status-bar": "~1.1.0",
     "formik": "^2.2.9",
     "jwt-decode": "^3.1.2",
     "prop-types": "^15.8.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-native": "0.64.2",
+    "react-native": "^0.69.0",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-banner-carousel": "^1.0.3",
     "react-native-emoticons": "snlbaral/react-native-emoticons",
@@ -56,7 +56,7 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
     "react-native-web": "0.17.1",
-    "react-native-webview": "^11.18.1",
+    "react-native-webview": "11.13.0",
     "react-navigation-stack": "^2.10.4",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "rn-all-nepal-payment": "^1.0.2",
