--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "@expo-google-fonts/inter": "^0.2.2",
     "@expo-google-fonts/raleway": "^0.2.2",
     "@expo/ngrok": "^4.1.0",
-    "@expo/vector-icons": "^12.0.5",
+    "@expo/vector-icons": "^13.0.0",
     "@ptomasroos/react-native-multi-slider": "^2.2.2",
-    "@react-native-async-storage/async-storage": "~1.15.0",
-    "@react-native-community/netinfo": "^6.0.2",
-    "@react-native-picker/picker": "2.1.0",
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-community/netinfo": "8.2.0",
+    "@react-native-firebase/app": "^15.2.0",
+    "@react-native-picker/picker": "2.4.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/material-bottom-tabs": "^6.0.9",
@@ -25,38 +26,40 @@
     "@unimodules/core": "~7.2.0",
     "@unimodules/react-native-adapter": "~6.5.0",
     "axios": "^0.24.0",
-    "expo": "~43.0.0",
-    "expo-camera": "~12.0.3",
-    "expo-checkbox": "~2.0.0",
+    "expo": "^45.0.0",
+    "expo-camera": "~12.2.0",
+    "expo-checkbox": "~2.1.0",
     "expo-fast-image": "^1.1.3",
-    "expo-file-system": "~13.0.3",
-    "expo-font": "~10.0.3",
-    "expo-image-picker": "~11.0.3",
+    "expo-file-system": "~14.0.0",
+    "expo-font": "~10.1.0",
+    "expo-image-picker": "~13.1.1",
     "expo-image-picker-multiple": "^1.4.1",
-    "expo-notifications": "~0.13.3",
-    "expo-permissions": "~13.0.3",
-    "expo-status-bar": "~1.1.0",
+    "expo-notifications": "~0.15.4",
+    "expo-permissions": "~13.2.0",
+    "expo-status-bar": "~1.3.0",
+    "firebase": "^9.6.11",
+    "firebase-admin": "^11.0.0",
     "formik": "^2.2.9",
     "jwt-decode": "^3.1.2",
     "prop-types": "^15.8.1",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "^0.69.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-native": "0.68.2",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-banner-carousel": "^1.0.3",
     "react-native-emoticons": "snlbaral/react-native-emoticons",
-    "react-native-gesture-handler": "~1.10.2",
-    "react-native-get-random-values": "^1.7.2",
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-get-random-values": "~1.8.0",
     "react-native-image-crop-picker": "^0.37.2",
     "react-native-image-slider-box": "^1.1.22",
-    "react-native-pager-view": "5.4.6",
+    "react-native-pager-view": "5.4.15",
     "react-native-paper": "^4.11.2",
     "react-native-picker-select": "^8.0.4",
-    "react-native-reanimated": "~2.2.0",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.8.0",
-    "react-native-web": "0.17.1",
-    "react-native-webview": "11.13.0",
+    "react-native-reanimated": "~2.8.0",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
+    "react-native-web": "0.17.7",
+    "react-native-webview": "11.18.1",
     "react-navigation-stack": "^2.10.4",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "rn-all-nepal-payment": "^1.0.2",
@@ -64,7 +67,8 @@
     "timeago.js": "^4.0.2",
     "unimodules-permissions-interface": "^6.1.0",
     "uuid": "^8.3.2",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "expo-firebase-recaptcha": "~2.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
