--- a/package.json
+++ b/package.json
@@ -31,13 +31,14 @@
     "expo-checkbox": "~2.1.0",
     "expo-fast-image": "^1.1.3",
     "expo-file-system": "~14.0.0",
+    "expo-firebase-recaptcha": "~2.2.0",
     "expo-font": "~10.1.0",
     "expo-image-picker": "~13.1.1",
     "expo-image-picker-multiple": "^1.4.1",
     "expo-notifications": "~0.15.4",
     "expo-permissions": "~13.2.0",
     "expo-status-bar": "~1.3.0",
-    "firebase": "^9.6.11",
+    "firebase": "^9.9.3",
     "firebase-admin": "^11.0.0",
     "formik": "^2.2.9",
     "jwt-decode": "^3.1.2",
@@ -55,7 +56,7 @@
     "react-native-pager-view": "5.4.15",
     "react-native-paper": "^4.11.2",
     "react-native-picker-select": "^8.0.4",
-    "react-native-reanimated": "~2.8.0",
+    "react-native-reanimated": "^2.8.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7",
@@ -67,8 +68,7 @@
     "timeago.js": "^4.0.2",
     "unimodules-permissions-interface": "^6.1.0",
     "uuid": "^8.3.2",
-    "yup": "^0.32.11",
-    "expo-firebase-recaptcha": "~2.2.0"
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
