--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "eject": "expo eject"
   },
@@ -12,7 +11,7 @@
     "@expo-google-fonts/raleway": "^0.2.2",
     "@expo/ngrok": "^4.1.0",
     "@expo/vector-icons": "^13.0.0",
-    "@postillon/react-native-instagram-zoomable": "git+https://github.com/snlbaral/myapp-instagram-scroll.git",
+    "@postillon/react-native-instagram-zoomable": "github:snlbaral/myapp-instagram-scroll",
     "@ptomasroos/react-native-multi-slider": "^2.2.2",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/netinfo": "8.2.0",
@@ -54,6 +53,7 @@
     "react-native-get-random-values": "~1.8.0",
     "react-native-image-crop-picker": "^0.37.2",
     "react-native-image-slider-box": "^1.1.22",
+    "react-native-optimized-flatlist": "^1.0.4",
     "react-native-pager-view": "5.4.15",
     "react-native-paper": "^4.11.2",
     "react-native-picker-select": "^8.0.4",
@@ -69,10 +69,13 @@
     "timeago.js": "^4.0.2",
     "unimodules-permissions-interface": "^6.1.0",
     "uuid": "^8.3.2",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "expo-splash-screen": "~0.15.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
   },
-  "private": true
+  "private": true,
+  "name": "Thrifted-app",
+  "version": "1.0.0"
 }
