--- a/package.json
+++ b/package.json
@@ -23,21 +23,25 @@
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
-    "@unimodules/core": "~7.2.0",
-    "@unimodules/react-native-adapter": "~6.5.0",
     "axios": "^0.24.0",
     "expo": "^45.0.0",
     "expo-camera": "~12.2.0",
     "expo-checkbox": "~2.1.0",
+    "expo-dev-client": "~1.0.1",
     "expo-fast-image": "^1.1.3",
     "expo-file-system": "~14.0.0",
     "expo-firebase-recaptcha": "~2.2.0",
     "expo-font": "~10.1.0",
     "expo-image-picker": "~13.1.1",
     "expo-image-picker-multiple": "^1.4.1",
+    "expo-media-library": "~14.1.0",
+    "expo-modules-autolinking": "~0.8.1 || ~0.9.0",
+    "expo-modules-core": "~0.9.2",
     "expo-notifications": "~0.15.4",
     "expo-permissions": "~13.2.0",
+    "expo-screen-orientation": "~4.2.0",
     "expo-status-bar": "~1.3.0",
+    "expo-updates": "~0.13.4",
     "firebase": "^9.9.3",
     "firebase-admin": "^11.0.0",
     "formik": "^2.2.9",
@@ -48,7 +52,8 @@
     "react-native": "0.68.2",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-banner-carousel": "^1.0.3",
-    "react-native-emoticons": "snlbaral/react-native-emoticons",
+    "react-native-emoticons": "github:snlbaral/react-native-emoticons",
+    "react-native-fast-image": "^8.6.0",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-get-random-values": "~1.8.0",
     "react-native-image-crop-picker": "^0.37.2",
@@ -67,10 +72,8 @@
     "rn-all-nepal-payment": "^1.0.2",
     "socket.io-client": "^4.5.0",
     "timeago.js": "^4.0.2",
-    "unimodules-permissions-interface": "^6.1.0",
     "uuid": "^8.3.2",
-    "yup": "^0.32.11",
-    "expo-splash-screen": "~0.15.1"
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
