--- a/app.json
+++ b/app.json
@@ -37,7 +37,9 @@
       }
     },
     "extra": {
-      
+      "eas": {
+        "projectId": "73860936-5567-4ac0-a29f-0ae5bf17dd74"
+      }
     }
   }
 }
