--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@expo-google-fonts/raleway": "^0.2.2",
     "@expo/ngrok": "^4.1.0",
     "@expo/vector-icons": "^13.0.0",
-    "@postillon/react-native-instagram-zoomable": "github:snlbaral/myapp-instagram-scroll",
+    "@postillon/react-native-instagram-zoomable": "git+https://github.com/snlbaral/myapp-instagram-scroll.git",
     "@ptomasroos/react-native-multi-slider": "^2.2.2",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/netinfo": "8.2.0",
@@ -34,6 +34,7 @@
     "expo-font": "~10.1.0",
     "expo-image-picker": "~13.1.1",
     "expo-image-picker-multiple": "^1.4.1",
+    "expo-linking": "~3.1.0",
     "expo-media-library": "~14.1.0",
     "expo-modules-autolinking": "~0.8.1 || ~0.9.0",
     "expo-modules-core": "~0.9.2",
@@ -41,7 +42,7 @@
     "expo-permissions": "~13.2.0",
     "expo-screen-orientation": "~4.2.0",
     "expo-status-bar": "~1.3.0",
-    "expo-updates": "~0.13.4",
+    "expo-updates": "^0.13.4",
     "firebase": "^9.9.3",
     "firebase-admin": "^11.0.0",
     "formik": "^2.2.9",
@@ -52,7 +53,7 @@
     "react-native": "0.68.2",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-banner-carousel": "^1.0.3",
-    "react-native-emoticons": "github:snlbaral/react-native-emoticons",
+    "react-native-emoticons": "git+https://github.com/snlbaral/react-native-emoticons.git",
     "react-native-fast-image": "^8.6.0",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-get-random-values": "~1.8.0",
@@ -73,8 +74,7 @@
     "socket.io-client": "^4.5.0",
     "timeago.js": "^4.0.2",
     "uuid": "^8.3.2",
-    "yup": "^0.32.11",
-    "expo-linking": "~3.1.0"
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
