--- a/app.json
+++ b/app.json
@@ -18,7 +18,7 @@
     ],
     "ios": {
       "supportsTablet": true,
-      "buildNumber": 5,
+      "buildNumber": "5",
       "bundleIdentifier": "com.snlbaral.HamroCloset2"
     },
     "android": {
