--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@expo-google-fonts/raleway": "^0.2.2",
     "@expo/ngrok": "^4.1.0",
     "@expo/vector-icons": "^13.0.0",
-    "@postillon/react-native-instagram-zoomable": "git+https://github.com/snlbaral/myapp-instagram-scroll.git",
+    "@postillon/react-native-instagram-zoomable": "github:snlbaral/myapp-instagram-scroll",
     "@ptomasroos/react-native-multi-slider": "^2.2.2",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/netinfo": "8.2.0",
@@ -53,12 +53,12 @@
     "react-native": "0.68.2",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-banner-carousel": "^1.0.3",
-    "react-native-emoticons": "git+https://github.com/snlbaral/react-native-emoticons.git",
+    "react-native-emoticons": "github:snlbaral/react-native-emoticons",
     "react-native-fast-image": "^8.6.0",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-get-random-values": "~1.8.0",
     "react-native-image-crop-picker": "^0.37.2",
-    "react-native-image-slider-box": "^1.1.22",
+    "react-native-image-slider-box": "git+https://github.com/pallavi000/react-native-image-slider-box.git",
     "react-native-optimized-flatlist": "^1.0.4",
     "react-native-pager-view": "5.4.15",
     "react-native-paper": "^4.11.2",
