--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "expo-screen-orientation": "~4.2.0",
     "expo-status-bar": "~1.3.0",
     "expo-updates": "^0.13.4",
-    "firebase": "^9.9.3",
+    "firebase": "^9.14.0",
     "firebase-admin": "^11.0.0",
     "formik": "^2.2.9",
     "jwt-decode": "^3.1.2",
@@ -59,6 +59,7 @@
     "react-native-get-random-values": "~1.8.0",
     "react-native-image-crop-picker": "^0.37.2",
     "react-native-image-slider-box": "git+https://github.com/pallavi000/react-native-image-slider-box.git",
+    "react-native-insta-story": "^1.1.8",
     "react-native-optimized-flatlist": "^1.0.4",
     "react-native-pager-view": "5.4.15",
     "react-native-paper": "^4.11.2",
