--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@expo-google-fonts/raleway": "^0.2.2",
     "@expo/ngrok": "^4.1.0",
     "@expo/vector-icons": "^13.0.0",
-    "@postillon/react-native-instagram-zoomable": "git+https://github.com/snlbaral/myapp-instagram-scroll",
     "@ptomasroos/react-native-multi-slider": "^2.2.2",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/netinfo": "8.2.0",
@@ -24,9 +23,11 @@
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
     "axios": "^0.24.0",
+    "dotenv": "^16.0.3",
     "expo": "^45.0.0",
     "expo-camera": "~12.2.0",
     "expo-checkbox": "~2.1.0",
+    "expo-constants": "~13.1.1",
     "expo-dev-client": "~1.0.1",
     "expo-fast-image": "^1.1.3",
     "expo-file-system": "~14.0.0",
@@ -41,6 +42,7 @@
     "expo-notifications": "~0.15.4",
     "expo-permissions": "~13.2.0",
     "expo-screen-orientation": "~4.2.0",
+    "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
     "expo-updates": "^0.13.4",
     "firebase": "^9.14.0",
@@ -57,14 +59,15 @@
     "react-native-fast-image": "^8.6.0",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-get-random-values": "~1.8.0",
-    "react-native-image-crop-picker": "^0.37.2",
     "react-native-image-slider-box": "git+https://github.com/pallavi000/react-native-image-slider-box.git",
     "react-native-insta-story": "git+https://github.com/snlbaral/react-native-insta-story",
     "react-native-optimized-flatlist": "^1.0.4",
     "react-native-pager-view": "5.4.15",
     "react-native-paper": "^4.11.2",
     "react-native-picker-select": "^8.0.4",
+    "react-native-pinchable": "^0.2.1",
     "react-native-reanimated": "^2.8.0",
+    "react-native-root-toast": "^3.3.1",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7",
@@ -75,8 +78,7 @@
     "socket.io-client": "^4.5.0",
     "timeago.js": "^4.0.2",
     "uuid": "^8.3.2",
-    "yup": "^0.32.11",
-    "expo-constants": "~13.1.1"
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
