--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^0.24.0",
     "dotenv": "^16.0.3",
     "expo": "^45.0.0",
+    "expo-asset": "^8.7.0",
     "expo-camera": "~12.2.0",
     "expo-checkbox": "~2.1.0",
     "expo-constants": "~13.1.1",
@@ -33,6 +34,10 @@
     "expo-file-system": "~14.0.0",
     "expo-firebase-recaptcha": "~2.2.0",
     "expo-font": "~10.1.0",
+    "expo-gl": "^12.0.1",
+    "expo-gl-cpp": "^11.4.0",
+    "expo-image-editor": "^1.7.1",
+    "expo-image-manipulator": "^11.0.0",
     "expo-image-picker": "~13.1.1",
     "expo-image-picker-multiple": "^1.4.1",
     "expo-linking": "~3.1.0",
@@ -51,7 +56,7 @@
     "jwt-decode": "^3.1.2",
     "prop-types": "^15.8.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react-dom": "^17.0.2",
     "react-native": "0.68.2",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-banner-carousel": "^1.0.3",
@@ -59,8 +64,9 @@
     "react-native-fast-image": "^8.6.0",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-get-random-values": "~1.8.0",
-    "react-native-image-slider-box": "git+https://github.com/pallavi000/react-native-image-slider-box.git",
-    "react-native-insta-story": "git+https://github.com/snlbaral/react-native-insta-story",
+    "react-native-image-slider-box": "github:pallavi000/react-native-image-slider-box",
+    "react-native-insta-story": "github:snlbaral/react-native-insta-story",
+    "react-native-modalbox": "^2.0.2",
     "react-native-optimized-flatlist": "^1.0.4",
     "react-native-pager-view": "5.4.15",
     "react-native-paper": "^4.11.2",
@@ -70,10 +76,11 @@
     "react-native-root-toast": "^3.3.1",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
-    "react-native-web": "0.17.7",
+    "react-native-web": "^0.17.7",
     "react-native-webview": "11.18.1",
     "react-navigation-stack": "^2.10.4",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
+    "recoil": "^0.7.6",
     "rn-all-nepal-payment": "^1.0.2",
     "socket.io-client": "^4.5.0",
     "timeago.js": "^4.0.2",
