--- a/eas.json
+++ b/eas.json
@@ -5,15 +5,17 @@
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal"
+      "distribution": "internal",
+      "channel":"staging"
     },
     "preview": {
       "distribution": "internal"
     },
     "production": {
       "android": {
-        "buildType": "apk"
-      }
+        "buildType": "app-bundle"
+      },
+      "channel":"production"
     }
   },
   "submit": {
