--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "axios": "^0.24.0",
     "dotenv": "^16.0.3",
     "expo": "^45.0.0",
-    "expo-asset": "^8.7.0",
+    "expo-asset": "~8.5.0",
     "expo-camera": "~12.2.0",
     "expo-checkbox": "~2.1.0",
     "expo-constants": "~13.1.1",
@@ -34,7 +34,7 @@
     "expo-file-system": "~14.0.0",
     "expo-firebase-recaptcha": "~2.2.0",
     "expo-font": "~10.1.0",
-    "expo-image-manipulator": "^11.0.0",
+    "expo-image-manipulator": "~10.3.1",
     "expo-image-picker": "~13.1.1",
     "expo-image-picker-multiple": "^1.4.1",
     "expo-linking": "~3.1.0",
@@ -69,7 +69,7 @@
     "react-native-paper": "^4.11.2",
     "react-native-picker-select": "^8.0.4",
     "react-native-pinchable": "^0.2.1",
-    "react-native-reanimated": "^2.8.0",
+    "react-native-reanimated": "~2.8.0",
     "react-native-root-toast": "^3.3.1",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
